--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serradora",
-  "version": "1.0.0",
+  "version": "2.0.1",
   "description": "Página web sa serradora.",
   "main": "src/main.js",
   "scripts": {
@@ -27,5 +27,8 @@
     "webpack": "^5.24.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "@farvell/jflow-core": "^2.0.9"
   }
 }
