--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@babel/core": "^7.13.8",
     "@babel/preset-env": "^7.13.9",
+    "@farvell/jflow-core": "^2.0.11",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.1.1",
     "file-loader": "^6.2.0",
@@ -27,8 +28,5 @@
     "webpack": "^5.24.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
-  },
-  "dependencies": {
-    "@farvell/jflow-core": "^2.0.11"
   }
 }
