--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "build": "webpack",
-    "watch": "webpack --watch",
+    "dev": "webpack --watch",
     "serve": "webpack serve",
     "build-prod": "NODE_ENV=production webpack"
   },
